[package]
name = "dma_pwm_pac"
version = "0.1.0"
edition = "2021"

[dependencies]
fugit = "0.3.7"

defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

#stm32g4xx-hal = { version = "0.0.1", features = ["rt", "stm32g431"] }
stm32g4xx-hal = { features = ["rt", "stm32g431"], git ="https://github.com/stm32-rs/stm32g4xx-hal.git", branch = "main"}

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"

[dependencies.stm32g4]
version = "0.15.1"
features = ["stm32g431", "rt"]